# couscous

./: .gitignore  README.md  main.py  pyproject.toml  rio.toml
api/: main.py
database/models/: couscous.py
database/service/: config.py  database.py
tests/: conftest.py  test_home.py
web/: __init__.py  auth.py  config.py
web/components/: __init__.py  navbar.py
web/pages/: __init__.py  home_page.py  news_page.py
web/service/: connection.py
web/templates/: 404.html  base.html
