[tool.poetry]
name = "couscous"
version = "0.1.0"
description = "Leitor de feeds RSS"
authors = ["Hildeberto <hildeberto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.99.0"
sqlmodel = "^0.0.8"
Flask = "^2.0.3"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
