[tool.poetry]
name = "couscous"
version = "0.1.0"
description = "Leitor de feeds RSS"
authors = ["Hildeberto <hildeberto@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
rio-ui = "^0.9.2"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
